src/test/deca/syntax/valid/minus_floatvar_int_minus_float.deca
// Description :
//
//      Test syntaxiquement correct de la soustraction d'un int et d'un float dans une variable float
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 06/06/2023 par gl03


{
    float y=2-3.5;
}