src/test/deca/syntax/invalid/minus_decl_var_minus_void.deca
// Description :
//
//      Test de programme syntaxiquement incorrect(non respect des attentes à 
//      droite de l'opérateur - avec une variable déclarée à gauche).
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 06/06/2023 par gl03


{
    int x;
    int y= x-;
    print(y);
}
